assets/css/style.css
/* Import Fonts from Google Fonts */
@import url('https://fonts.googleapis.com/css2?family=Nerko+One&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');

/* Asterisk wildcard selector to override default styles added by the browser */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General Styles */
body {
    background: url("../images/background.jpg");
    background-size: cover;
}

header {
    color: whitesmoke;
    font-family: 'Nerko One', sans-serif;
    background-color: #005a0073;
    letter-spacing: 2px;
    text-align: center;
    font-size: 150%;
}

main {
    margin-top: 50px;
}

/* Header Styles */


/* Introdution Box Styles */
#intro-container, #game-rules-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

#game-intro, #game-rules {
    background-color: whitesmoke;
    width: 80vw;
    height: auto;
    margin-top: 20px;
    padding: 10px;
    border-radius: 10px;
    box-shadow: 0 0 20px 20px rgba(255, 255, 0, 0.795);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#intro-image-container {
    overflow: hidden;
    display: flex;
    justify-content: center;
}

